--- a/nlp_service/.env.example
+++ b/nlp_service/.env.example
@@ -3,9 +3,18 @@
 # DATABASE_NAME=mydb
 # COLLECTION_NAME=mycollection
 
-# ---- LLM / AI Integration (Google Gemini) ----
+# ---- LLM / AI Integration ----
+# Provider: "groq" (default, recommended) or "gemini"
+LLM_PROVIDER=groq
+
+# Groq (primary — fast, generous free tier)
+# Get your API key at: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.3-70b-versatile
+
+# Google Gemini (fallback)
 # Get your API key at: https://aistudio.google.com/apikey
-GEMINI_API_KEY=your_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.0-flash
 
 # Parser mode: "auto" (LLM first, rule-based fallback),
